@@ -12,6 +12,8 @@ export(.get_exprs)
 export(.ini_expressionset_cli)
 export(.ini_expressionset_yml)
 export(.show_expressionset)
+export(all_complete)
+export(all_unique)
 export(as.data.frame)
 export(as_yaml)
 export(cells)
@@ -24,6 +26,8 @@ export(errors)
 export(export_yaml)
 export(expr)
 export(indicator)
+export(is_complete)
+export(is_unique)
 export(label)
 export(lbj_cells)
 export(lbj_rules)
@@ -70,5 +74,6 @@ importFrom(graphics,lines)
 importFrom(graphics,par)
 importFrom(graphics,strwidth)
 importFrom(graphics,text)
+importFrom(stats,complete.cases)
 importFrom(utils,getFromNamespace)
 useDynLib(validate, .registration=TRUE)
