@@ -1,6 +1,8 @@
 version 0.2.7
 - lbj_logger object now has an (experimental) $plot() method.
+- new helper functions: 'is_unique', 'all_unique', 'is_complete', 'all_complete'
 - switched to 'tinytest' testing framework
+
 
 version 0.2.6
 - New methods 'all' and 'any' for 'validation' objects
@@ -21,7 +23,7 @@ version 0.2.6
 version 0.2.5
 - Documentation updates (Thanks to Matthias Gomolka)
 - Removed deprecated functions 'number_missing', 'fraction_missing', 
-  'row_missing', 'number_unique', 'any_dunplicated', 'any_missing'.
+  'row_missing', 'number_unique', 'any_unplicated', 'any_missing'.
 - Bugfix: the 'call' object in a 'confrontation' object was created incorrectly.
   This only affects printing.
 
